--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,9 +1,9 @@
-<div class="container" id="login">
-	<h1>CliqFlix</h1>
+<div class="div" id="login">
+	<h1 class="title">CliqFlix</h1>
 	<h5>Login and Registration</h5>
-	<div class="row">
+	<div class="div">
 		<div class=".col-md-6">
-			<form ng-submit="lC.register()" class="form-horizontal">
+			<form ng-submit="lC.register()" class="js-search-form">
 				<fieldset>
 					<legend>Registration</legend>
 					<div class="form-group">
